# nchat

./: .gitignore  .gitleaks.toml  .grype.yaml  CONTRIBUTING.md  README.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  SECURITY.md  gitleaks.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: scan-placeholders.ts  scan-secrets.ts  validate-secrets.ts
.github/wiki/: ARCHITECTURE.md  Architecture-Overview.md  BUNDLE-ANALYSIS.md  CHANGELOG.md  CI-CD-Quick-Reference.md  Contributing.md  DEPLOYMENT.md  DESKTOP.md  DOCUMENTATION-INDEX.md  E2E-Backend-Setup.md  Home.md  INSTALL.md  MULTIPLATFORM-BUILD-STATUS.md  (+18 more)
backend/: .env.dev  .env.example  .gitignore  docker-compose.yml
desktop/: .env.example  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  desktop.json
desktop/src-tauri/src/: lib.rs  main.rs  menu.rs  tray.rs
desktop/src-tauri/src/commands/: app.rs  clipboard.rs  drag.rs  mod.rs  notification.rs  shell.rs  update.rs  window.rs
desktop/src-tauri/src/state/: mod.rs
frontend/: .env.example  .lighthouserc.js  jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend-vite/: .env.example  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
integration_test/: smoke_test.bats
tests/: playwright.config.ts
(+5009 files in other folders)
