[package]
name = "nchat-desktop"
version = "0.1.0"
edition = "2021"
description = "nChat Desktop — Tauri 2 shell"
license = "MIT"

[lib]
name = "nchat_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic"] }
sentry-tauri = "0.4"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
